Changes by Jacob Barkdull 2016-01-05
--------------------------------------------------------------------------------
* hashover/scripts/javascript-mode.php

	- Updated Copyright year.
	- Small code changes.


* Added: Danish translation by Jacob Moen.
* Merged: Further improvements to German locale.


Changes by Jacob Barkdull 2016-01-02
--------------------------------------------------------------------------------
* Merged: New public `$setCookies` setting for enabling and disabling cookies.
* Merged: Improvements to German locale.


Changes by Jacob Barkdull 2016-12-03
--------------------------------------------------------------------------------
* Now using MCRYPT_DEV_URANDOM instead of MCRYPT_RAND.
* Small CSS changes.


Changes by Jacob Barkdull 2016-10-28
--------------------------------------------------------------------------------
* Added loading indicator to embedded images.
* Fixed: Loading indicator not showing on "Show X Other Comments" link.
* Fixed: User being logged in as Anonymous when posting a comment.
* Fixed: Use Japanese ellipsis.
* Small improvements to multibyte support.
* Other small changes.


Changes by Jacob Barkdull 2016-09-20
--------------------------------------------------------------------------------
* Allow admin to change comment moderation status when editing comments.
* Allow admin to view and edit comments marked as deleted.
* Allow admin to edit all applicable comment information, not just the body.
* Differentiate between deleted, marked deleted, and unreadable comments.
* Small improvements to support for multibyte locale strings.
* Minor locale changes.
* Minor bug fixes.


Changes by Jacob Barkdull 2016-08-28
--------------------------------------------------------------------------------
* Added 3 new comment sorting methods.

	- "By replies" sorts comments by the number of replies each comment has,
	  in ascending order. Meaning the more replies a comment has, the more
	  towards the top the comment appears.
