@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'Du vil ikke blive varslet via email',
 	'subscribed-tip'	=> 'vil blive varslet via email',
 	'unsubscribed-tip'	=> 'er ikke tilmeldt email varsling',
-	'first-comment'		=> 'Vær den første til at kommentere!',
+	'first-comment'		=> 'Ingen kommentarer endnu.',
 	'show-other-comments'	=> array ('Vis %d Yderlig Kommentar', 'Vis %d Yderligere Kommentarer'),
 	'show-number-comments'	=> array ('Vis %d Kommentar', 'Vis %d Kommentar'),
 	'date-years'		=> array ('%d år siden', '%d år siden'),
