@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'Du wirst nicht per E-Mail benachrichtigt',
 	'subscribed-tip'	=> 'wirst per E-Mail benachrichtigt',
 	'unsubscribed-tip'	=> 'hat E-Mail-Benachrichtigungen nicht abonniert',
-	'first-comment'		=> 'Schreib den ersten Kommentar!',
+	'first-comment'		=> 'Noch keine Kommentare.',
 	'show-other-comments'	=> array ('Zeige %d anderen Kommentar', 'Zeige %d weitere Kommentare'),
 	'show-number-comments'	=> array ('Zeige %d Kommentar', 'Zeige %d Kommentare'),
 	'date-years'		=> array ('Vor %d Jahr', 'Vor %d Jahren'),
