@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'You will not be notified via e-mail',
 	'subscribed-tip'	=> 'will be notified via e-mail',
 	'unsubscribed-tip'	=> 'is not subscribed to e-mail notifications',
-	'first-comment'		=> 'Be the first to comment!',
+	'first-comment'		=> 'No comments yet.',
 	'show-other-comments'	=> array ('Show %d Other Comment', 'Show %d Other Comments'),
 	'show-number-comments'	=> array ('Show %d Comment', 'Show %d Comments'),
 	'date-years'		=> array ('%d year ago', '%d years ago'),
