@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'No seras notificado por correo electrónico',
 	'subscribed-tip'	=> 'Seras notificado vía e-mail',
 	'unsubscribed-tip'	=> 'No estas suscrito a las notificaciones por correo electrónico',
-	'first-comment'		=> '¡Se el primero en comentar!',
+	'first-comment'		=> 'Sin comentarios aún.',
 	'show-other-comments'	=> array ('Mostrar %d Otro Comentario', 'Mostrar %d Otros Comentarios'),
 	'show-number-comments'	=> array ('Mostrar %d Comentario', 'Mostrar %d Comentarios'),
 	'date-years'		=> array ('Hace %d año', 'Hace %d años'),
