@@ -106,7 +106,7 @@ $locale = array (
 	'commenter-tip'		=> 'Vous serez notifié par e-mail',
 	'subscribed-tip'	=> 'sera notifié par e-mail',
 	'unsubscribed-tip'	=> 'n\'a pas souscrit aux notifications',
-	'first-comment'		=> 'Soyez le premier à commenter !',
+	'first-comment'		=> 'Aucun commentaire pour l\'instant.',
 	'show-other-comments'	=> array ('Afficher %d Autre Commentaire', 'Afficher %d Autres Commentaires'),
 	'show-number-comments'	=> array ('Afficher %d Commentaire', 'Afficher %d Commentaires'),
 	'date-years'		=> array ('Il y a %d an', 'Il y a %d ans'),
