@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> '電子メールを介して通知されません',
 	'subscribed-tip'	=> '電子メールを介して通知され',
 	'unsubscribed-tip'	=> '匿名の場合はメール通知されません',
-	'first-comment'		=> 'ぜひ最初のコメントを！',
+	'first-comment'		=> 'まだコメントがありません。',
 	'show-other-comments'	=> array ('その他%d件のコメントを表示', '全%d件のコメントを表示'),
 	'show-number-comments'	=> array ('%d件のコメントを表示', '他%dコメントを表示'),
 	'date-years'		=> array ('%d年前', '%d年前'),
