@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'U zult geen notificatie krijgen via e-mail',
 	'subscribed-tip'	=> 'zal per email op de hoogte worden gebracht',
 	'unsubscribed-tip'	=> 'is niet geabonneerd op notificaties',
-	'first-comment'		=> 'Wees de eerste om te reactie!',
+	'first-comment'		=> 'Nog geen reacties.',
 	'show-other-comments'	=> array ('Toon %d andere reactie', 'Toon %d andere reacties'),
 	'show-number-comments'	=> array ('Toon %d reactie', 'Toon %d reacties'),
 	'date-years'		=> array ('%d jaar geleden', '%d jaar geleden'),
