@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'Nie będziesz otrzymywać powiadomień e-mailem',
 	'subscribed-tip'	=> 'będzie powiadomiony e-mailem',
 	'unsubscribed-tip'	=> 'nie będzie powiadomiony e-mailem',
-	'first-comment'		=> 'Napisz pierwszy komentarz!',
+	'first-comment'		=> 'Brak komentarzy Jeszcze.',
 	'show-other-comments'	=> array ('Show %d Inny Komentarz', 'Show %d Inne Komentarze'),
 	'show-number-comments'	=> array ('Show %d Komentarz', 'Show %d Komentarze'),
 	'date-years'		=> array ('%d rok temu', '%d lat temu'),
