@@ -99,7 +99,7 @@ $locale = array(
 	'commenter-tip'		=> 'Você não será avisado por email.',
 	'subscribed-tip'	=> 'será avisado por email.',
 	'unsubscribed-tip'	=> 'não assinou para receber notificações por email',
-	'first-comment'		=> 'Seja o primeiro a comentar!',
+	'first-comment'		=> 'Ainda não há comentários.',
 	'show-other-comments'	=> array ('Mostrar %d outro Comentário', 'Mostrar %d outro Comentários'),
 	'show-number-comments'	=> array ('Mostrar %d Comentário', 'Mostrar %d Comentários'),
 	'date-years'		=> array ('%d ano atrás', '%d anos atrás'),
