@@ -99,7 +99,7 @@ $locale = array(
 	'commenter-tip'		=> 'Tu nu va fi notificat prin e-mail',
 	'subscribed-tip'	=> 'va fi notificat prin e-mail',
 	'unsubscribed-tip'	=> 'nu este abonat la notificări prin e-mail',
-	'first-comment'		=> 'Fii primul care comenteaza!',
+	'first-comment'		=> 'Niciun comentariu pana acum.',
 	'show-other-comments'	=> array ('Arata %d Alte Comentariu', 'Arata %d Alte Comentarii'),
 	'show-number-comments'	=> array ('Arata %d Comentariu', 'Arata %d Comentarii'),
 	'date-years'		=> array ('%d an in urma', '%d ani in urma'),
