@@ -99,7 +99,7 @@ $locale = array (
 	'commenter-tip'		=> 'E-posta ile bilgilendirilmeyeceksiniz',
 	'subscribed-tip'	=> 'e-posta ile bilgilendirilecek.',
 	'unsubscribed-tip'	=> 'e-posta ile bilgilendirmeye kayıt olmamış',
-	'first-comment'		=> 'İlk yorumu siz yapın!',
+	'first-comment'		=> 'Henüz yorumu yok.',
 	'show-other-comments'	=> array ('Diğer %d yorumu göster', 'Diğer %d yorumu göster'),
 	'show-number-comments'	=> array ('Diğer %d yorumu göster', 'Diğer %d yorumu göster'),
 	'date-years'		=> array ('%d yıl önce', '%d yıl önce'),
